# Win-Term-Mac

./: .gitignore  计划文档和验收标准.md
.github/workflows/: build.yml  win-terminal.yml
Src_CPP/: CMakeLists.txt  ReadMe.md
Src_CPP/src/: main.cpp
Src_CPP/src/cmd/: CommandCoordinator.cpp  CommandCoordinator.h  CommandPaletteWidget.cpp  CommandPaletteWidget.h  QtKeyTranslator.cpp  QtKeyTranslator.h
Src_CPP/src/io/: PaneTerminalBridge.cpp  PaneTerminalBridge.h
Src_CPP/src/keymap/: Keymap.cpp  Keymap.h
Src_CPP/src/palette/: CommandPalette.cpp  CommandPalette.h
Src_CPP/src/pane/: Pane.cpp  Pane.h  PaneTreeWidget.cpp  PaneTreeWidget.h
Src_CPP/src/render/: TerminalView.cpp  TerminalView.h
Src_CPP/src/term/: TerminalSession.cpp  TerminalSession.h
Src_Electron/: ReadMe.md  index.html  main.js  package.json  preload.js  pty.js
Src_Electron/renderer/: commands.js  index.js  io.js  keymap.js  palette.js  pane.js  panes.js  terminal.js
Src_Flutter/: ReadMe.md  pubspec.yaml
Src_Flutter/lib/: main.dart
Src_Flutter/lib/io/: pty_bridge.dart
Src_Flutter/lib/keymap/: keymap.dart
Src_Flutter/lib/palette/: command_palette.dart  pane_controller.dart  pane_workspace.dart
Src_Flutter/lib/pane/: pane.dart  pane_workspace.dart
Src_Flutter/lib/term/: pane_tree_view.dart  terminal_session.dart
Src_Flutter/test/: pane_test.dart
Src_Golang/: BUILD.md  ReadMe.md  app.go  go.mod  main.go
Src_Golang/control/: chord.go  controller.go  controller_test.go  palette_input.go
Src_Golang/io/: bridge.go  keys.go  keys_test.go
Src_Golang/keymap/: keymap.go
Src_Golang/palette/: palette.go
Src_Golang/pane/: pane.go  pane_test.go
Src_Golang/paneui/: controller.go  controller_test.go  keys.go  layout.go
Src_Golang/term/: grid.go  input.go  input_test.go  pty_unix.go  pty_windows.go  session.go  view.go
Src_Mix/: ReadMe.md
Src_Mix/core/: Cargo.toml  build.rs  cbindgen.toml
Src_Mix/core/src/: lib.rs  pane.rs
Src_Mix/core/src/io/: bridge.rs  mod.rs
Src_Mix/linux/: Cargo.toml  keymap.md
Src_Mix/linux/src/: command.rs  keymap.rs  main.rs  palette.rs  panes.rs  termview.rs
Src_Mix/macos/: Package.swift
Src_Mix/macos/Sources/Sub/: AppDelegate.swift  CoreBridge.swift  SplitTree.swift  TerminalPaneView.swift  main.swift
Src_Rust/: Cargo.toml  ReadMe.md
Src_Rust/src/: input.rs  keymap.rs  main.rs  palette.rs  pane.rs  render.rs  term.rs
Src_Tauri/: ReadMe.md  index.html  package.json  vite.config.js
Src_Tauri/src/: bridge.js  controller.js  ipc.js  keymap.js  main.js  palette.js  pane.js  term.js  workspace.js
Src_Tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
Src_Tauri/src-tauri/capabilities/: default.json
Src_Tauri/src-tauri/icons/: icon.icns
Src_Tauri/src-tauri/src/: main.rs  pty.rs
