[package]
name = "wintermac_linux"
version = "0.1.0"
edition = "2021"
description = "Linux 宿主(GTK4):窗格 UI 骨架,经 C ABI 调用共享 Rust 内核 wintermac_core"

[[bin]]
name = "wintermac_linux"
path = "src/main.rs"

[dependencies]
# GTK4 Rust 绑定:窗口 / GtkPaned / 事件控制器等。
# 需要系统安装 libgtk-4-dev(pkg-config 找得到 gtk4)。
gtk4 = { version = "0.9", package = "gtk4", features = ["v4_10"] }

# TODO(集成): 通过 C ABI 链接 wintermac_core。
# 方案一(推荐,零手写 FFI):把 core 当作构建依赖,用 bindgen 从
#   cbindgen 生成的 wintermac_core.h 产出 Rust 绑定;运行时链接 cdylib。
# 方案二:直接在本 crate 手写 `extern "C"` 声明(见 src/main.rs 中的 ffi 模块桩)。
# 这里先用手写声明保持可编译,待内核产物就绪后切换。
#
# [build-dependencies]
# bindgen = "0.70"
